realice los cambios de la segunda pre entrega

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Inicio</title>
 </head>
-
 <body>
     <header>
-
         <div>
             <nav class="d-none d-md-flex nav-custom">
                 <ul>
@@ -41,64 +39,57 @@
             </div>
         </div>
     </header>
-
     <main>
-
         <div class="store-container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-18">
                     <div class="store">
                         <img src="./assets/imagen-portada-1.jpg" alt="Bienvenidos">
                         <p> Bienvenido a Bali Surfshop: El mundo de las tablas desde 1998
-
                             En BALI Surfshop, estamos emocionados de compartir nuestra pasión por el surf y el estilo de vida playero contigo. 
                             Nuestro equipo está formado por amantes del océano, que están aquí para ayudarte a encontrar todo lo que necesitas para tener 
                             la mejor experiencia en el agua.
                             Desde tablas de surf de alta calidad hasta accesorios y ropa especializada, ofrecemos una amplia gama de productos 
-                            seleccionados cuidadosamente para garantizar que obtengas lo mejor en calidad y rendimiento..</p>
+                            seleccionados cuidadosamente para garantizar que obtengas lo mejor en calidad y rendimiento.
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-18">
                     <div class="store">
                         <img src="./assets/surfhop-interior.jpg" alt="surfhop-interior">
                         <p>Ya sea que seas un principiante emocionado por coger tus primeras olas o un surfista experimentado en busca 
-                            de equipo de primera clase, ¡estamos aquí para ayudarte a alcanzar tus metas en el mundo del surf!
-
+                            de equipo de primera clase, ¡estamos aquí para ayudarte a alcanzar tus metas en el mundo del surf
                             Sumérgete en nuestro sitio web y descubre la última colección de equipos y accesorios de surf. 
                             ¡Estamos aquí para brindarte una experiencia excepcional de compra y una conexión auténtica 
-                            con la cultura del surf!</p>
+                            con la cultura del surf!
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-18">
                     <div class="store">
                         <img src="./assets/tablas-de-surf.jpg" alt="Bienvenidos">
                         <p>Envíos a Todo el País: El Surf al Alcance de Tus Manos
-
                             En Balisurfshop, queremos que el deporte llegue a cada rincón del país. Por eso, nos
                             enorgullecemos de ofrecer envíos rápidos y seguros a todas las regiones, para que puedas
                             recibir tus productos o accesorios en la puerta de tu casa. Sin importar dónde te encuentres,
-                            nuestra misión es que la magia del surfing esté al alcance de tus manos.</p>
+                            nuestra misión es que la magia del surfing esté al alcance de tus manos.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-
     </main>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; Desde 2001. BALI SURFSHOP</p>
+            <p class="left-text">Contactanos +598 99 444 222</p>
+            <p class="left-text2">Nos encontramos en Av.italia 2043</p>
+            <p class="right-text">Seguinos @Balisurfshop</p>
+            <img class="right-image" src="./assets/redes sociales.png" alt="Imagen-footer">
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
-
-<footer class="footer">
-    <div class="footer-content">
-        <p>&copy; Desde 2001. BALI SURFSHOP</p>
-        <p class="left-text">Contactanos +598 99 444 222</p>
-        <p class="left-text2">Nos encontramos en Av.italia 2043</p>
-        <p class="right-text">Seguinos @Balisurfshop</p>
-        <img class="right-image" src="./assets/redes sociales.png" alt="Imagen-footer">
-    </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
-
 </html>
