--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Preguntas Frecuentes</title>
 </head>
-
 <body>
     <header>
-
         <div>
             <nav class="d-none d-md-flex nav-custom">
                 <ul>
@@ -41,29 +39,52 @@
             </div>
         </div>
     </header>
-
     <main class="preguntas-main">
         <div class="preguntas-freq">
             <h1>Preguntas Frecuentes</h1>
         </div>    
         <div class="faq">
-            <div class="question">1. ¿Donde se encuentra la tienda?</div>
-            <div class="answer">Nos encotramos en Av. Italia 2043 frente a la Intendencia Deprtamental de Montevideo.</div>
+            <div class="question">
+                <p>1. ¿Donde se encuentra la tienda?</p>
+            </div>
+            <div class="answer">
+                <p>Nos encotramos en Av. Italia 2043 frente a la Intendencia Deprtamental de Montevideo.</p>
+            </div>
 
-            <div class="question">2. ¿Cuáles son sus opciones de pago aceptadas?</div>
-            <div class="answer">Aceptamos tarjetas de crédito y débito principales, así como PayPal, Mercadopago y transferencias bancarias.</div>
+            <div class="question">
+                <p>2. ¿Cuáles son sus opciones de pago aceptadas?</p>
+            </div>
+            <div class="answer">
+                <p>Aceptamos tarjetas de crédito y débito principales, así como PayPal, Mercadopago y transferencias bancarias.</p>
+            </div>
 
-            <div class="question">3. ¿Cuánto tiempo tarda en procesarse mi pedido?</div>
-            <div class="answer">Normalmente, procesamos los pedidos en un plazo de 1-2 días hábiles a partir de la fecha de compra.</div>
+            <div class="question">
+                <p>3. ¿Cuánto tiempo tarda en procesarse mi pedido?</p>
+            </div>
+            <div class="answer">
+                <p>Normalmente, procesamos los pedidos en un plazo de 1-2 días hábiles a partir de la fecha de compra.</p>
+            </div>
 
-            <div class="question">4. ¿Ofrecen envío internacional?</div>
-            <div class="answer">Sí, enviamos a la mayoría de los países. Puede verificar la disponibilidad específica durante el proceso de pago.</div>
+            <div class="question">
+                <p>4. ¿Ofrecen envío internacional?</p>
+            </div>
+            <div class="answer">
+                <p>Sí, enviamos a la mayoría de los países. Puede verificar la disponibilidad específica durante el proceso de pago.</p>
+            </div>
 
-            <div class="question">5. ¿Cómo puedo realizar un seguimiento de mi pedido?</div>
-            <div class="answer">Puede realizar un seguimiento de su pedido iniciando sesión en su cuenta y visitando la sección "Historial de pedidos". También le enviaremos actualizaciones por correo electrónico.</div>
+            <div class="question">
+                <p>5. ¿Cómo puedo realizar un seguimiento de mi pedido?</p>
+            </div>
+            <div class="answer">
+                <p>Puede realizar un seguimiento de su pedido iniciando sesión en su cuenta y visitando la sección "Historial de pedidos". También le enviaremos actualizaciones por correo electrónico.</p>
+            </div>
 
-            <div class="question">6. ¿Tienen una política de devoluciones?</div>
-            <div class="answer">Sí, tenemos una política de devolución de 30 días. Puede devolver los productos en su estado original para un reembolso completo.</div>
+            <div class="question">
+                <p> 6. ¿Tienen una política de devoluciones?</p>
+            </div>
+            <div class="answer">
+                <p>Sí, tenemos una política de devolución de 30 días. Puede devolver los productos en su estado original para un reembolso completo.</p>
+            </div>
             <div class="formulario-container">
                 <h2>Formulario de Consultas</h2>
                 <form>
@@ -81,22 +102,17 @@
             </div>
         </div>
     </main>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; Desde 2001. BALI SURFSHOP</p>
+            <p class="left-text">Contactanos +598 99 444 222</p>
+            <p class="left-text2">Nos encontramos en Av.italia 2043</p>
+            <p class="right-text">Seguinos @Balisurfshop</p>
+            <img class="right-image" src="../assets/redes sociales.png" alt="Imagen-footer">
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
-
-<footer class="footer">
-    <div class="footer-content">
-        <p>&copy; Desde 2001. BALI SURFSHOP</p>
-        <p class="left-text">Contactanos +598 99 444 222</p>
-        <p class="left-text2">Nos encontramos en Av.italia 2043</p>
-        <p class="right-text">Seguinos @Balisurfshop</p>
-        <img class="right-image" src="../assets/redes sociales.png" alt="Imagen-footer">
-    </div>
-</footer>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
-
 </html>
