--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sobre Nosotros</title>
 </head>
-
 <body>
     <header>
-
         <div>
             <nav class="d-none d-md-flex nav-custom">
                 <ul>
@@ -29,7 +27,6 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse nav-custom-mobile" id="navbarToggleExternalContent" data-bs-theme="dark">
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -41,80 +38,59 @@
             </div>
         </div>
     </header>
-
     <main>
-
         <div class="nosotros-container">
             <div class="nosotros">
                 <h2>Acerca de Nosotros</h2>
-
                 <p>¡Bienvenido a Bali Surfshop!
-                    <br>
                     Somos Bali Surfshop, tu destino principal para todos los entusiastas del surf y amantes
                     de la vida playera. Ubicados en Montevideo, nuestra tienda está dedicada a ofrecer la mejor 
                     experiencia en surf y brindar un espacio acogedor para todos los que comparten nuestra pasión 
                     por las olas.
-                    <br>
                     Nuestra misión es ser la principal fuente de inspiración y equipamiento para todos 
                     los amantes del surf, desde principiantes hasta profesionales experimentados. Nos esforzamos por brindar
                     productos de alta calidad y un servicio excepcional que haga que cada experiencia en el agua 
                     sea memorable y emocionante.
-                    <br>
                     Nos visualizamos como una comunidad unida de surfistas, comprometidos con preservar y promover la 
                     cultura del surf de manera sostenible. Queremos ser reconocidos como un líder en la industria del surf, 
                     fomentando un estilo de vida saludable y de respeto por el medio ambiente.
-                    <br>
                 </p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18531.164443966118!2d-55.91810799377737!3d-34.80901082662972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e381b71afb71699%3A0xf65f698b739757f1!2sServicios%20google%20negocios%20uruguay!5e0!3m2!1ses-419!2suy!4v1697667272919!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7790.202333734298!2d-55.95092556180797!3d-34.821622435638055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2suy!4v1697751843542!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <h2>Nuestros valores son</h2>
-                    Pasión por el Surf: Fomentamos la pasión por el surf y promovemos un amor profundo por la vida en el mar.<br>
-                    Compromiso con la Calidad: Nos comprometemos a proporcionar productos y servicios de la más alta calidad 
-                    para garantizar la máxima satisfacción de nuestros clientes.<br>
-                    Responsabilidad Ambiental: Nos esforzamos por operar de manera sostenible y fomentar prácticas que protejan y 
-                    preserven el entorno natural.<br>
-                    Comunidad y Conexión: Valoramos la comunidad del surf y buscamos construir conexiones auténticas entre los 
-                    surfistas y amantes de la playa de todo el mundo.
-                    <br>
-                    <br>
-                    <br>
-                <img src="../assets/imagen-nosotros.jpg" alt="surfhop interior">
-                    <br>    
+                    <p>Pasión por el Surf: Fomentamos la pasión por el surf y promovemos un amor profundo por la vida en el mar.</p>
+                    <p>Compromiso con la Calidad: Nos comprometemos a proporcionar productos y servicios de la más alta calidad 
+                    para garantizar la máxima satisfacción de nuestros clientes.</p>
+                    <p>Responsabilidad Ambiental: Nos esforzamos por operar de manera sostenible y fomentar prácticas que protejan y 
+                    preserven el entorno natural.</p>
+                    <p>Comunidad y Conexión: Valoramos la comunidad del surf y buscamos construir conexiones auténticas entre los 
+                    surfistas y amantes de la playa de todo el mundo.</p>
+                <img src="../assets/imagen-nosotros.jpg" alt="surfhop interior"> 
                     <h2>Horario de Atención:</h2>
-                    Lunes a Viernes: 9:00 a.m. - 6:00 p.m. <br>
-                    Sábados y Domingos: 10:00 a.m. - 4:00 p.m.
-                    <br>
+                    <p>Lunes a Viernes: 9:00 a.m. - 6:00 p.m.</p>
+                    <p>Sábados y Domingos: 10:00 a.m. - 4:00 p.m.</p>
                     <h2>Envíos a Todo el País</h2>
-                    Si no puedes visitarnos en persona, no te preocupes, hacemos envíos a todas las partes del país.
+                    <p>Si no puedes visitarnos en persona, no te preocupes, hacemos envíos a todas las partes del país.
                     Nuestro equipo se encargará de que tus productos lleguen de manera rápida y segura hasta
-                    la puerta de tu hogar. ¡Lleva la adrenalina del deporte a cualquier rincón de Uruguay!
-                    <br>
+                    la puerta de tu hogar. ¡Lleva la adrenalina del deporte a cualquier rincón de Uruguay!</p>
                     <h2>Contáctanos</h2>
-                    Estamos aquí para ayudarte y responder a tus preguntas. No dudes en comunicarte con nosotros a
+                    <p>Estamos aquí para ayudarte y responder a tus preguntas. No dudes en comunicarte con nosotros a
                     través de nuestro número de teléfono: +598 97 666 555 o enviarnos un correo electrónico a
                     info@guitarstore.com. Estaremos encantados de atenderte y brindarte la mejor experiencia musical.
-                    <br>
-                    ¡Gracias por ser parte de la comunidad Bali surfshop!
-                </p>
+                    ¡Gracias por ser parte de la comunidad Bali surfshop!</p>
             </div>
         </div>
     </main>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; Desde 2001. BALI SURFSHOP</p>
+            <p class="left-text">Contactanos +598 99 444 222</p>
+            <p class="left-text2">Nos encontramos en Av.italia 2043</p>
+            <p class="right-text">Seguinos @Balisurfshop</p>
+            <img class="right-image" src="../assets/redes sociales.png" alt="Imagen-footer">
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
-
-<footer class="footer">
-    <div class="footer-content">
-        <p>&copy; Desde 2001. BALI SURFSHOP</p>
-        <p class="left-text">Contactanos +598 99 444 222</p>
-        <p class="left-text2">Nos encontramos en Av.italia 2043</p>
-        <p class="right-text">Seguinos @Balisurfshop</p>
-        <img class="right-image" src="../assets/redes sociales.png" alt="Imagen-footer">
-    </div>
-</footer>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
-
 </html>
